--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
 			<artifactId>beetl</artifactId>
 			<version>2.7.12</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
