--- a/src/main/resources/assets/config.properties
+++ b/src/main/resources/assets/config.properties
@@ -3,4 +3,5 @@ email.dataEmailUserPwd = chengwei123
 email.notifyEmailUser = sync_18301166408@163.com
 email.remindEmailUser = 295999757@qq.com
 didalist.username = š®–°¢Ÿª˜·ÖÚ–ØĞä
-didalist.password = ™ª™ª•›œ¨‘¬
+didalist.password = ™ª™ª•›œ¨‘¬
+email.hourseWork.remindEmailUser = 295999757@qq.com;18301166408@163.com
