邮箱地址从properties文件获取含特殊字符处理

--- a/src/main/resources/assets/config.properties
+++ b/src/main/resources/assets/config.properties
@@ -1,7 +1,7 @@
-email.dataEmailUser = sync_18301166408@163.com
-email.dataEmailUserPwd = chengwei123
-email.notifyEmailUser = sync_18301166408@163.com
-email.remindEmailUser = 295999757@qq.com
-didalist.username = š®–°¢Ÿª˜·ÖÚ–ØĞä
-didalist.password = ™ª™ª•›œ¨‘¬
-email.hourseWork.remindEmailUser = 295999757@qq.com;18301166408@163.com
+email.dataEmailUser=sync_18301166408@163.com
+email.dataEmailUserPwd=chengwei123
+email.notifyEmailUser=sync_18301166408@163.com
+email.remindEmailUser=295999757@qq.com
+didalist.username=š®–°¢Ÿª˜·ÖÚ–ØĞä
+didalist.password=™ª™ª•›œ¨‘¬
+email.hourseWork.remindEmailUser=295999757@qq.com;18301166408@163.com
