--- a/src/main/resources/assets/config.properties
+++ b/src/main/resources/assets/config.properties
@@ -5,4 +5,4 @@ email.remindEmailUser = 295999757@qq.com
 didalist.username = š®–°¢Ÿª˜·ÖÚ–ØĞä
 didalist.password = ™ª™ª•›œ¨‘¬
 
-email.hourseWork.remindEmailUser = 295999757@qq.com;18301166408@163.com
+email.schedule.remindEmailUser=295999757@qq.com
